2010-09-20  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (y-or-n-p): Remove leftover code from revno 101459.

	* emacs-lisp/smie.el (smie-indent--hanging-p): Use `smie-indent--bolp'.

2010-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-bnf-precedence-table): Improve error message.
	(smie-debug--prec2-cycle, smie-debug--describe-cycle): New functions.
	(smie-prec2-levels): Use them to better diagnose precedence cycles.
	(smie-blink-matching-check): Don't signal a mismatch if car is t.
	(smie-blink-matching-open): Rewrite to remove assumptions, so that
	something like "." can also be a closer.
	(smie--associative-p, smie-indent--hanging-p, smie-indent--bolp)
	(smie-indent--offset, smie-indent--offset-rule, smie-indent--column):
	Rename internal functions to use "--".  Update callers.

	* frame.el (make-frame-names-alist): Don't list frames on other displays.

	* fringe.el (fringe-styles): New var.
	(fringe-mode, fringe-query-style): Use it.

2010-09-18  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el: Version 2.8
	(sql-login-params): Update widget structure; changes still needed.
	(sql-product-alist): Add :list-all and :list-table features for
	SQLite, Postgres and MySQL products.
	(sql-redirect): Handle default value.
	(sql-execute, sql-execute-feature): New functions.
	(sql-read-table-name): New function.
	(sql-list-all, sql-list-table): New functions.  User API.
	(sql-mode-map, sql-interactive-mode-map): Add key definitions
	for above functions.
	(sql-mode-menu, sql-interactive-mode-menu): Add menu definitions
	for above functions.
	(sql-postgres-login-params): Add user and database defaults.
	(sql-buffer-live-p): Bug fix.
	(sql-product-history): New variable.
	(sql-read-product): New function. Use it.
	(sql-set-product, sql-product-interactive): Use it.
	(sql-connection-history): New variable.
	(sql-read-connection): New function.  Use it.
	(sql-connect): New function.