@@ -1,3 +1,7 @@
+2010-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* help-fns.el (describe-variable): Add original value, if applicable.
+
 2010-09-20  Juanma Barranquero  <lekktu@gmail.com>
 
 	* subr.el (y-or-n-p): Remove leftover code from revno 101459.
